# brotli2-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
brotli-sys/: Cargo.toml  build.rs
brotli-sys/src/: brotli_capi.cc  brotli_capi.h  lib.rs
brotli2/: all.html  enum.CompressMode.html  index.html  struct.CompressParams.html
brotli2/bufread/: index.html  struct.BrotliDecoder.html  struct.BrotliEncoder.html
brotli2/raw/: enum.CoStatus.html  enum.CompressOp.html  enum.DeStatus.html  fn.compress_buf.html  fn.decompress_buf.html  index.html  struct.Compress.html  struct.Decompress.html  struct.Error.html
brotli2/read/: index.html  struct.BrotliDecoder.html  struct.BrotliEncoder.html
brotli2/write/: index.html  struct.BrotliDecoder.html  struct.BrotliEncoder.html
examples/: all-read-write-roundtrips.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: bufread.rs  lib.rs  raw.rs  read.rs  stream.rs  write.rs
src/brotli2/: bufread.rs.html  lib.rs.html  raw.rs.html  read.rs.html  write.rs.html
systest/: Cargo.toml  build.rs  workaround.h
systest/src/: main.rs
tests/: drop-incomplete.rs
