[package]
name = "brotli"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/brotli-rs"
homepage = "https://github.com/alexcrichton/brotli-rs"
documentation = "http://alexcrichton.com/brotli-rs"
description = """
Bindings to libbrotli to provide brotli decompression and compression to Rust
"""

[dependencies]
brotli-sys = { path = "brotli-sys", version = "0.1.0" }
libc = "0.2"

[dev-dependencies]
rand = "0.3"
