[package]
name = "brotli2"
version = "0.2.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/brotli2-rs"
homepage = "https://github.com/alexcrichton/brotli2-rs"
documentation = "https://docs.rs/brotli2"
description = """
Bindings to libbrotli to provide brotli decompression and compression to Rust
"""
categories = ["compression", "api-bindings"]

[dependencies]
brotli-sys = { path = "brotli-sys", version = "0.2.0" }
libc = "0.2"

[dev-dependencies]
rand = "0.3"
quickcheck = "0.2"
