[package]
name = "brotli-sys"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "brotli"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/brotli2-rs"
homepage = "https://github.com/alexcrichton/brotli2-rs"
documentation = "http://alexcrichton.com/brotli2-rs"
description = """
Raw bindings to libbrotli
"""
categories = ["external-ffi-bindings"]

include = [
  "src/*",
  "brotli/enc/*",
  "brotli/dec/*",
  "brotli/common/*",
  "Cargo.toml",
  "build.rs"
]

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
