[package]
name = "brotli-sys"
version = "0.2.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "brotli"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/brotli2-rs"
homepage = "https://github.com/alexcrichton/brotli2-rs"
documentation = "https://docs.rs/brotli-sys"
description = """
Raw bindings to libbrotli
"""
categories = ["external-ffi-bindings"]

include = [
  "src/*",
  "brotli/enc/*",
  "brotli/dec/*",
  "brotli/common/*",
  "Cargo.toml",
  "build.rs"
]

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
